<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RecipeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/RecepieName"
                android:textColor="#020202"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/cheeziem"
                android:textColor="#303030"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="#E64A19"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textColor="#303030"

                android:textSize="20sp" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>